# aws-s3-api

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.locust.yaml  docker-compose.yaml  locustfile.py  openapi.json  pyproject.toml  run.sh
.github/workflows/: oasdiff.yaml
scripts/: generate-openapi.py
src/files_api/: __init__.py  aws_lambda_handler.py  errors.py  main.py  route_handler.py  routes.py  schemas.py  settings.py
src/files_api/monitoring/: logger.py
src/files_api/s3/: delete_objects.py  read_objects.py  write_objects.py
tests/: __init__.py  conftest.py  consts.py
tests/fixtures/: api_client.py  mocked_aws.py
tests/unit_tests/: test__main.py  test__routes__error_cases.py  test__routes__happy_path.py
tests/unit_tests/s3/: test__delete_objects.py  test__read_objects.py  test__write_objects.py
