[project]
name = "aws-s3-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.29",
    "fastapi>=0.137.0",
    "httpx2>=2.4.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.43.29",
    "moto[s3,server]>=5.2.2",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
]
