[project]
name = "aws-s3-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.29",
    "fastapi>=0.137.0",
    "httpx2>=2.4.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
    "boto3-stubs[s3]>=1.43.29",
]

[dependency-groups]
dev = [
    "locust>=2.44.4",
    "mangum>=0.21.0",
    "moto[s3,server]>=5.2.2",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
]

[project.optional-dependencies]
aws-lambda = ["mangum", "boto3-stubs[s3]>=1.43.29"]

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
